update: 框架样式调整

--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
+
+  <style type="text/css">
+    html, body {
+      height: 100%;
+      margin: 0;
+    }
+
+  </style>
+
   <body>
-    <div id="app"></div>
+    <div id="app" style="height:100%;"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
